Minor fixes (for gh-pages).

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:300,400'>
-    <link rel='shortcut icon' href='/images/favicon.png'>
+    <link rel='shortcut icon' href='./images/favicon.png'>
 
     <title>Travelpayouts-test</title>
   </head>
